[package]
name = "mini-wasm"
version = "0.1.0"
authors = ["Jakub Jaroszewski <jakub.jaroszewski@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen="0.2.69"
# js-sys="0.3.46"

[dependencies.web-sys]
version = "0.3.46"
features = [
    "Document",
    "Element",
    "Window",
]
