[package]
name = "rust-webgl"
version = "0.1.0"
authors = ["Jakub Jaroszewski <jakub.jaroszewski@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.10"
wasm-bindgen = "0.2.33"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'KeyboardEvent',
  'MouseEvent',
  'Node',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'Window',
]

[profile.release]
lto = true
